# tarook

./: # TODO  .dockerignore  .envrc  .envrc.lib.sh  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .yamllint.yml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE.txt  README.md  flake.nix  module.nix  pyproject.toml  renovate.json  requirements.txt  towncrier.toml
.gitlab/: README.md  changelog_config.yml
actions/: apply-all.sh  apply-custom.sh  apply-k8s-core.sh  apply-k8s-supplements.sh  apply-prepare-gw.sh  apply-stage2.sh  apply-stage3.sh  apply-stage4.sh  apply-stage5.sh  apply-terraform.sh  apply-tofu.sh  apply.sh  check_plan.py  destroy.sh  detect-vault-image.sh  init-cluster-repo.sh  init.sh  install-k8s-ch-loadbalancer.sh  install-k8s-openstack-cinder-csi.sh  install-k8s-openstack-cloud-controller.sh  k8s-login.sh  lib.sh  manage_roles.py  manual-terraform.sh  manual-tofu.sh  migrate-cluster-repo.sh  migrate-count-to-for-each.sh  migrate-docker-containerd.sh  migrate-to-release.sh  offline_cluster.py  rotate-root-ca.sh  system_update_nodes.sh  test.sh  update-frontend-nodes.sh  update-inventory.sh  update-kubernetes-nodes.sh  update_inventory.py  upgrade.sh  vault.sh  vault_env.sh  (+3 more)
ansible/: .ansible-lint  02_trampoline.yaml  03_final.yaml  03_k8s_base.yaml  03_z_export_config.yaml  04_tests.yaml  05_upgrade_to_1.18.yaml  05_upgrade_to_1.19.yaml  05_upgrade_to_1.20.yaml  05_upgrade_to_1.21.yaml  06_system_update_nodes.yaml  README.md  ansible.cfg  helpers.yaml  requirements.yaml  teardown_cluster.yaml
ci/: after_script_cleanup.sh  before_script_cleanup.py  build-image.yaml  clean-up-os-project.py  cleanup.sh  cluster-tests.yaml  create_chore_release_note.sh  custom-play.yaml  diagnostic-tools.yaml  flake.nix  hotfix-prepare.yaml  patch_config.py  reachability-or-recreate.sh  release.yaml  retry_and_timeout.sh
defaults/: main.yaml
doc/: intersphinx.py
docs/: .terraform-doc-header.md  .terraform-docs.yaml  README.md  book.toml  conf.py  index.md  index.rst  introduction.rst  mkdocs_admin.yml  mkdocs_client.yml
install-node/: setup_install_node.yaml
jenkins/: .gitignore  config.template.toml  env.template.sh  envrc.template.sh  manage_cluster.sh  template.gitignore  toml_helper.py
jsonnet-sources/: .gitignore  Makefile  rebuild.sh
k8s-base/: _offline_cluster.yaml  _online_cluster.yaml  install_frontend.yaml  install_k8s_base.yaml  install_k8s_ch_loadbalancer.yaml  install_k8s_openstack_cinder_csi.yaml  install_k8s_openstack_cloud_controller.yaml  migrate-docker-to-containerd.yaml  offline_cluster.yaml  online_cluster.yaml  rotate_root_ca.yaml  system_update_nodes.yaml  test.yaml
k8s-managed-services/: install.yaml  test.yaml
k8s-service-layer/: README.md  install.yaml  rotate_root_ca.yaml  test.yaml
nix/: ch-k8s-lbaas.nix  lib.nix  load-balancing.nix  poetry.nix  renderDocs.nix  vault.nix  wireguard.nix
tasks/: main.yaml
templates/: config.template.hcl  config.template.toml  envrc.template.sh  etcd_backup_s3_config.template.yaml  template.gitignore  yaook-k8s-env.template.sh
terraform/: .gitignore  00-variables.tf  01-discovery.tf  10-networking.tf  20-gateway.tf  30-controller-nodes.tf  30-master-nodes.tf  40-worker-nodes.tf  50-object-storage.tf  99-outputs.tf  README.md  versions.tf
tofu/: 30-master-nodes.tf  99-outputs.tf  versions.tf
tools/: .gitignore  assemble_cephcluster_storage_nodes_yaml.py  cheaprandom.py  compile_helm_mirror.py  datatestcheap.sh  dump-k8s.sh  echo-lb.yaml  fix-acng-cache.py  iperf2.yaml  monitor-http.sh  non-psp.yaml  (+8 more)
(+2174 files in other folders)
