[tool.poetry]
name = "yk8s"
version = "0.0.0"
description = ""
authors = ["The Yaook Authors"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.0.0"
kubernetes = "^29.0.0"
openshift = "^0.13.1"
python-openstackclient = "^6.2.0"
mergedeep = "^1.3.4"
loguru = "^0.7.0"
PyYAML = "^6.0"
packaging = "^23.1"
jsonschema = "^4.17.3"
toml = "^0.10.2"
kubernetes-validate = "^1.26.0"
hvac = "^2.0.0"
boto3 = "^1.26.155"
pre-commit = "^3.3.3"
yq = "^3.4.1"
python-hcl2 = "^4.3.2"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ansible-lint = { version = "^24.0.0", markers = "platform_system != 'Windows'" }
flake8 = "^7.0.0"
GitPython = "^3.1.32"

[tool.poetry.group.offline-installation.dependencies]
semver = "^3.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-tabs = "^3.4.1"
furo = "^2024.0.0"
towncrier = "^23.6.0"
sphinx-multiversion = "^0.2.4"
myst-parser = "^3.0.0"
sphinx-design = "^0.5.0"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
