[tool.poetry]
name = "yk8s"
version = "0.0.0"
description = ""
authors = ["The Yaook Authors"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^30.0.0"
openshift = "^0.13.1"
python-openstackclient = "^7.0.0"
python-neutronclient = "^11.3.1"
loguru = "^0.7.0"
packaging = "^23.1"
jsonschema = "^4.17.3"
kubernetes-validate = "^1.26.0"
hvac = "^2.0.0"
boto3 = "^1.26.155"
pre-commit = "^3.3.3"
tomlkit = "^0.13.0"
yq = "^3.4.1"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ansible-lint = { version = "^24.0.0", markers = "platform_system != 'Windows'" }
flake8 = "^7.0.0"
GitPython = "^3.1.32"

[tool.poetry.group.offline-installation.dependencies]
semver = "^3.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-tabs = "^3.4.1"
furo = "^2024.0.0"
towncrier = "^24.0.0"
sphinx-multiversion = "^0.2.4"
myst-parser = "^4.0.0"
sphinx-design = "^0.6.0"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.minimal-access.dependencies]
yq = "^3.4.1"
ansible = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
